data/derived/comb/progs/unify/prog3420.ml.out
Characters 69-70:
  | Sine s -> Format.printf "%s" s;;
                                 ^
Error: This expression has type expr but an expression was expected of type
         string
